# bigquery-manager

./: Pipfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/bigquery_manager/: __init__.py  client.py  manager.py
tests/: test_manager.py
